// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders disabled buttons 1`] = `
<div>
  <button
    data-testid="decrement"
    disabled={true}
    onClick={[Function]}
  >
    -
  </button>
  <Display
    clicks={0}
  />
  <button
    data-testid="increment"
    disabled={true}
    onClick={[Function]}
  >
    +
  </button>
</div>
`;

exports[`renders enabled buttons 1`] = `
.emotion-0 {
  margin: 1em;
  color: black;
}

<Counter>
  <div>
    <button
      data-testid="decrement"
      disabled={false}
      onClick={[Function]}
    >
      -
    </button>
    <Display
      clicks={0}
    >
      <Styled(span)
        clicks={0}
        data-testid="count"
      >
        <span
          className="emotion-0"
          data-testid="count"
        >
          0
        </span>
      </Styled(span)>
    </Display>
    <button
      data-testid="increment"
      disabled={false}
      onClick={[Function]}
    >
      +
    </button>
  </div>
</Counter>
`;
